--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div>
-    <div *ngFor="let file of mappedFiles">
-      <p>{{ file.name }}</p>
-      <p>{{ file.size }}</p>
-    </div>
-  </div>
+  <stock-inventory></stock-inventory>
+</div>
